--- a/homeworks/HW07/HW07.ipynb
+++ b/homeworks/HW07/HW07.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 492,
+   "execution_count": 538,
    "id": "be24662c",
    "metadata": {},
    "outputs": [],
@@ -43,11 +43,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 493,
+   "execution_count": null,
    "id": "6f1b7326",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import numpy as np\n",
+    "from sklearn.cluster import KMeans\n",
+    "from sklearn.metrics import adjusted_rand_score\n",
+    "\n",
+    "def stability_test(X, k, n_runs=5):\n",
+    "    \"\"\"\n",
+    "    Проверка устойчивости KMeans\n",
+    "    Возвращает среднее и std Silhouette за n_runs\n",
+    "    \"\"\"\n",
+    "    silhouettes = []\n",
+    "    all_labels = []\n",
+    "    \n",
+    "    for i in range(n_runs):\n",
+    "        kmeans = KMeans(n_clusters=k, n_init=10, random_state=i)  # меняем random_state\n",
+    "        labels = kmeans.fit_predict(X)\n",
+    "        silhouettes.append(silhouette_score(X, labels))\n",
+    "        all_labels.append(labels)\n",
+    "    \n",
+    "    # Сравниваем разбиения между собой\n",
+    "    ari_scores = []\n",
+    "    for i in range(n_runs):\n",
+    "        for j in range(i+1, n_runs):\n",
+    "            ari_scores.append(adjusted_rand_score(all_labels[i], all_labels[j]))\n",
+    "    \n",
+    "    print(f\"Устойчивость KMeans (k={k}, {n_runs} прогонов):\")\n",
+    "    print(f\"  Silhouette: {np.mean(silhouettes):.4f} ± {np.std(silhouettes):.4f}\")\n",
+    "    print(f\"  ARI между разбиениями: {np.mean(ari_scores):.4f} ± {np.std(ari_scores):.4f}\")\n",
+    "    print(f\"  Max отклонение Silhouette: {np.max(silhouettes)-np.min(silhouettes):.4f}\")\n",
+    "    \n",
+    "    return np.mean(silhouettes), np.std(silhouettes)\n",
+    "\n",
+    "\n",
     "def compute_dbscan_metrics(X, eps, min_samples):\n",
     "    \"\"\"Считает правильные метрики для DBSCAN\"\"\"\n",
     "    db = DBSCAN(eps=eps, min_samples=min_samples)\n",
@@ -240,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 494,
+   "execution_count": 540,
    "id": "8c67ad9b",
    "metadata": {},
    "outputs": [],
@@ -278,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 495,
+   "execution_count": 541,
    "id": "5c6d0da6",
    "metadata": {},
    "outputs": [
@@ -395,7 +427,7 @@
        "4  -5.471054   7.001149  0.131213  "
       ]
      },
-     "execution_count": 495,
+     "execution_count": 541,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -407,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 496,
+   "execution_count": 542,
    "id": "b82c4238",
    "metadata": {},
    "outputs": [
@@ -440,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 497,
+   "execution_count": 543,
    "id": "ca6c91c5",
    "metadata": {},
    "outputs": [
@@ -599,7 +631,7 @@
        "max       13.717091     41.452857    213.381767      2.490745  "
       ]
      },
-     "execution_count": 497,
+     "execution_count": 543,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -610,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 498,
+   "execution_count": 544,
    "id": "f2453bd6",
    "metadata": {},
    "outputs": [
@@ -708,7 +740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 499,
+   "execution_count": 545,
    "id": "899e716c",
    "metadata": {},
    "outputs": [
@@ -761,7 +793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 500,
+   "execution_count": 546,
    "id": "818f9575",
    "metadata": {},
    "outputs": [],
@@ -856,7 +888,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 501,
+   "execution_count": 547,
    "id": "b934b741",
    "metadata": {},
    "outputs": [
@@ -887,7 +919,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 502,
+   "execution_count": 548,
    "id": "9a674dfc",
    "metadata": {},
    "outputs": [],
@@ -904,7 +936,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 503,
+   "execution_count": 549,
    "id": "005b7e8a",
    "metadata": {},
    "outputs": [
@@ -977,7 +1009,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 504,
+   "execution_count": 550,
    "id": "d4b16807",
    "metadata": {},
    "outputs": [
@@ -1000,7 +1032,7 @@
        " 'dataset_03': {'kmeans': {}, 'dbscan': {}}}"
       ]
      },
-     "execution_count": 504,
+     "execution_count": 550,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1022,6 +1054,7 @@
     "\n",
     "all_metrics['dataset_01']['dbscan'] = correct_dbscan_metrics\n",
     "all_metrics\n",
+    "\n",
     "\n"
    ]
   },
@@ -1035,7 +1068,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 505,
+   "execution_count": 551,
    "id": "79a6587c",
    "metadata": {},
    "outputs": [
@@ -1115,7 +1148,7 @@
        "4          4  1.659901 -2.133292   1.895472"
       ]
      },
-     "execution_count": 505,
+     "execution_count": 551,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1127,7 +1160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 506,
+   "execution_count": 552,
    "id": "e06f74f2",
    "metadata": {},
    "outputs": [
@@ -1155,7 +1188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 507,
+   "execution_count": 553,
    "id": "e0b51f0b",
    "metadata": {},
    "outputs": [
@@ -1259,7 +1292,7 @@
        "max    7999.00000     2.987555     2.995553    29.460076"
       ]
      },
-     "execution_count": 507,
+     "execution_count": 553,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1270,7 +1303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 508,
+   "execution_count": 554,
    "id": "a72d91ec",
    "metadata": {},
    "outputs": [
@@ -1368,7 +1401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 509,
+   "execution_count": 555,
    "id": "cc81faa8",
    "metadata": {},
    "outputs": [
@@ -1422,7 +1455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 510,
+   "execution_count": 556,
    "id": "20b9f81b",
    "metadata": {},
    "outputs": [
@@ -1457,7 +1490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 511,
+   "execution_count": 557,
    "id": "8c44374e",
    "metadata": {},
    "outputs": [
@@ -1525,7 +1558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 512,
+   "execution_count": 558,
    "id": "24466ffb",
    "metadata": {},
    "outputs": [],
@@ -1560,7 +1593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 513,
+   "execution_count": 559,
    "id": "37be4c98",
    "metadata": {},
    "outputs": [
@@ -1646,7 +1679,7 @@
        "4          4  9.963812 -8.869921  2.966583  0.915899"
       ]
      },
-     "execution_count": 513,
+     "execution_count": 559,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1658,7 +1691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 514,
+   "execution_count": 560,
    "id": "f3038f6c",
    "metadata": {},
    "outputs": [
@@ -1687,7 +1720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 515,
+   "execution_count": 561,
    "id": "8e439645",
    "metadata": {},
    "outputs": [
@@ -1800,7 +1833,7 @@
        "max    14999.000000     16.207863     14.271153      5.795876     11.266865"
       ]
      },
-     "execution_count": 515,
+     "execution_count": 561,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1811,7 +1844,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 516,
+   "execution_count": 562,
    "id": "8c1902ce",
    "metadata": {},
    "outputs": [
@@ -1908,7 +1941,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 517,
+   "execution_count": 563,
    "id": "3cc64946",
    "metadata": {},
    "outputs": [
@@ -1962,7 +1995,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 518,
+   "execution_count": 564,
    "id": "c415c3c3",
    "metadata": {},
    "outputs": [
@@ -1996,7 +2029,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 519,
+   "execution_count": 565,
    "id": "48becf4f",
    "metadata": {},
    "outputs": [
@@ -2065,7 +2098,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 520,
+   "execution_count": 566,
    "id": "c7719d2b",
    "metadata": {},
    "outputs": [],
@@ -2091,7 +2124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 521,
+   "execution_count": 567,
    "id": "5e155078",
    "metadata": {},
    "outputs": [],
@@ -2102,7 +2135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 522,
+   "execution_count": 568,
    "id": "479fbf15",
    "metadata": {},
    "outputs": [],
@@ -2127,6 +2160,43 @@
     "\n",
     "with open('artifacts/best_configs.json', 'w') as f:\n",
     "    json.dump(best_configs, f, indent=2, default=str)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 570,
+   "id": "72a4c220",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "==================================================\n",
+      "ТЕСТ УСТОЙЧИВОСТИ ДЛЯ ДАТАСЕТА 03 (KMeans, k=3)\n",
+      "==================================================\n",
+      "Устойчивость KMeans (k=3, 5 прогонов):\n",
+      "  Silhouette: 0.3155 ± 0.0000\n",
+      "  ARI между разбиениями: 1.0000 ± 0.0000\n",
+      "  Max отклонение Silhouette: 0.0000\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(np.float64(0.31554470037825183), np.float64(0.0))"
+      ]
+     },
+     "execution_count": 570,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(\"=\"*50)\n",
+    "print(\"ТЕСТ УСТОЙЧИВОСТИ ДЛЯ ДАТАСЕТА 03 (KMeans, k=3)\")\n",
+    "print(\"=\"*50)\n",
+    "stability_test(X, k=3, n_runs=5)"
    ]
   }
  ],
