--- a/homeworks/HW07/HW07.ipynb
+++ b/homeworks/HW07/HW07.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 538,
+   "execution_count": 607,
    "id": "be24662c",
    "metadata": {},
    "outputs": [],
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 608,
    "id": "6f1b7326",
    "metadata": {},
    "outputs": [],
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 540,
+   "execution_count": 609,
    "id": "8c67ad9b",
    "metadata": {},
    "outputs": [],
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 541,
+   "execution_count": 610,
    "id": "5c6d0da6",
    "metadata": {},
    "outputs": [
@@ -427,7 +427,7 @@
        "4  -5.471054   7.001149  0.131213  "
       ]
      },
-     "execution_count": 541,
+     "execution_count": 610,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -439,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 542,
+   "execution_count": 611,
    "id": "b82c4238",
    "metadata": {},
    "outputs": [
@@ -472,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 543,
+   "execution_count": 612,
    "id": "ca6c91c5",
    "metadata": {},
    "outputs": [
@@ -631,7 +631,7 @@
        "max       13.717091     41.452857    213.381767      2.490745  "
       ]
      },
-     "execution_count": 543,
+     "execution_count": 612,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -642,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 544,
+   "execution_count": 613,
    "id": "f2453bd6",
    "metadata": {},
    "outputs": [
@@ -740,7 +740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 545,
+   "execution_count": 614,
    "id": "899e716c",
    "metadata": {},
    "outputs": [
@@ -793,7 +793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 546,
+   "execution_count": 615,
    "id": "818f9575",
    "metadata": {},
    "outputs": [],
@@ -888,7 +888,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 547,
+   "execution_count": 616,
    "id": "b934b741",
    "metadata": {},
    "outputs": [
@@ -919,7 +919,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 548,
+   "execution_count": 617,
    "id": "9a674dfc",
    "metadata": {},
    "outputs": [],
@@ -930,13 +930,13 @@
     "                     min_samples=int(best_params['min_samples']))\n",
     "    labels_best = db_best.fit_predict(X)\n",
     "\n",
-    "df['label'] = labels_best\n",
-    "df.to_csv('artifacts/labels/labels_ hw07_ds1.csv', index=False)"
+    "df['cluster_label'] = labels_best\n",
+    "df.to_csv('artifacts/labels/labels_hw07_ds1.csv', index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 549,
+   "execution_count": 618,
    "id": "005b7e8a",
    "metadata": {},
    "outputs": [
@@ -1009,7 +1009,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 550,
+   "execution_count": 619,
    "id": "d4b16807",
    "metadata": {},
    "outputs": [
@@ -1032,7 +1032,7 @@
        " 'dataset_03': {'kmeans': {}, 'dbscan': {}}}"
       ]
      },
-     "execution_count": 550,
+     "execution_count": 619,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1068,7 +1068,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 551,
+   "execution_count": 620,
    "id": "79a6587c",
    "metadata": {},
    "outputs": [
@@ -1148,7 +1148,7 @@
        "4          4  1.659901 -2.133292   1.895472"
       ]
      },
-     "execution_count": 551,
+     "execution_count": 620,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1160,7 +1160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 552,
+   "execution_count": 621,
    "id": "e06f74f2",
    "metadata": {},
    "outputs": [
@@ -1188,7 +1188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 553,
+   "execution_count": 622,
    "id": "e0b51f0b",
    "metadata": {},
    "outputs": [
@@ -1292,7 +1292,7 @@
        "max    7999.00000     2.987555     2.995553    29.460076"
       ]
      },
-     "execution_count": 553,
+     "execution_count": 622,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1303,7 +1303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 554,
+   "execution_count": 623,
    "id": "a72d91ec",
    "metadata": {},
    "outputs": [
@@ -1401,7 +1401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 555,
+   "execution_count": 624,
    "id": "cc81faa8",
    "metadata": {},
    "outputs": [
@@ -1455,7 +1455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 556,
+   "execution_count": 625,
    "id": "20b9f81b",
    "metadata": {},
    "outputs": [
@@ -1490,7 +1490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 557,
+   "execution_count": 626,
    "id": "8c44374e",
    "metadata": {},
    "outputs": [
@@ -1558,7 +1558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 558,
+   "execution_count": 627,
    "id": "24466ffb",
    "metadata": {},
    "outputs": [],
@@ -1579,8 +1579,8 @@
     "\n",
     "all_metrics['dataset_02']['dbscan'] = correct_dbscan_metrics\n",
     "all_metrics\n",
-    "df['label'] = labels_best\n",
-    "df.to_csv('artifacts/labels/labels_ hw07_ds2.csv', index=False)"
+    "df['cluster_label'] = labels\n",
+    "df.to_csv('artifacts/labels/labels_hw07_ds2.csv', index=False)"
    ]
   },
   {
@@ -1593,7 +1593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 559,
+   "execution_count": 628,
    "id": "37be4c98",
    "metadata": {},
    "outputs": [
@@ -1679,7 +1679,7 @@
        "4          4  9.963812 -8.869921  2.966583  0.915899"
       ]
      },
-     "execution_count": 559,
+     "execution_count": 628,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1691,7 +1691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 560,
+   "execution_count": 629,
    "id": "f3038f6c",
    "metadata": {},
    "outputs": [
@@ -1720,7 +1720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 561,
+   "execution_count": 630,
    "id": "8e439645",
    "metadata": {},
    "outputs": [
@@ -1833,7 +1833,7 @@
        "max    14999.000000     16.207863     14.271153      5.795876     11.266865"
       ]
      },
-     "execution_count": 561,
+     "execution_count": 630,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1844,7 +1844,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 562,
+   "execution_count": 631,
    "id": "8c1902ce",
    "metadata": {},
    "outputs": [
@@ -1941,7 +1941,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 563,
+   "execution_count": 632,
    "id": "3cc64946",
    "metadata": {},
    "outputs": [
@@ -1995,7 +1995,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 564,
+   "execution_count": 633,
    "id": "c415c3c3",
    "metadata": {},
    "outputs": [
@@ -2029,7 +2029,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 565,
+   "execution_count": 634,
    "id": "48becf4f",
    "metadata": {},
    "outputs": [
@@ -2098,7 +2098,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 566,
+   "execution_count": 635,
    "id": "c7719d2b",
    "metadata": {},
    "outputs": [],
@@ -2124,18 +2124,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 567,
+   "execution_count": 636,
    "id": "5e155078",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df['label'] = labels_best\n",
-    "df.to_csv('artifacts/labels/labels_ hw07_ds3.csv', index=False)"
+    "df['cluster_label'] = labels\n",
+    "df.to_csv('artifacts/labels/labels_hw07_ds3.csv', index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 568,
+   "execution_count": 637,
    "id": "479fbf15",
    "metadata": {},
    "outputs": [],
@@ -2164,7 +2164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 570,
+   "execution_count": 638,
    "id": "72a4c220",
    "metadata": {},
    "outputs": [
@@ -2187,7 +2187,7 @@
        "(np.float64(0.31554470037825183), np.float64(0.0))"
       ]
      },
-     "execution_count": 570,
+     "execution_count": 638,
      "metadata": {},
      "output_type": "execute_result"
     }
