HW06 modifyed metrics, search_summaries

--- a/homeworks/HW06/HW06.ipynb
+++ b/homeworks/HW06/HW06.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 80,
    "id": "47eee4a1",
    "metadata": {},
    "outputs": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 81,
    "id": "40ec599c",
    "metadata": {},
    "outputs": [],
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 82,
    "id": "f386cad7",
    "metadata": {},
    "outputs": [
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 83,
    "id": "58e15ad7",
    "metadata": {},
    "outputs": [
@@ -382,7 +382,7 @@
        "[5 rows x 30 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -393,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 84,
    "id": "7635a605",
    "metadata": {},
    "outputs": [
@@ -693,7 +693,7 @@
        "[8 rows x 30 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -712,7 +712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 85,
    "id": "3c5d02bb",
    "metadata": {},
    "outputs": [
@@ -732,7 +732,7 @@
        "((9000, 28), (3000, 28))"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -763,7 +763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 86,
    "id": "38ca9750",
    "metadata": {},
    "outputs": [
@@ -778,11 +778,13 @@
     {
      "data": {
       "text/plain": [
-       "{'best_params': {'lr__C': 10.0, 'lr__penalty': 'l2', 'lr__solver': 'lbfgs'},\n",
-       " 'best_cv_roc_auc': 0.8822238806908922}"
+       "{'LogisticRegression': {'best_params': {'lr__C': 10.0,\n",
+       "   'lr__penalty': 'l2',\n",
+       "   'lr__solver': 'lbfgs'},\n",
+       "  'best_cv_roc_auc': 0.8822238806908922}}"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -840,12 +842,13 @@
     "\n",
     "results.append(evaluate_on_test(best_lr, X_test, y_test, \"LogisticRegression\"))\n",
     "\n",
-    "search_summaries[\"LogisticRegression\"]"
+    "#search_summaries[\"LogisticRegression\"]\n",
+    "search_summaries"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 87,
    "id": "6c749ca6",
    "metadata": {},
    "outputs": [],
@@ -874,7 +877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 88,
    "id": "944d6e74",
    "metadata": {},
    "outputs": [
@@ -885,7 +888,7 @@
        " 'best_cv_roc_auc': 0.9112358432907914}"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -905,7 +908,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 89,
    "id": "62fc2faa",
    "metadata": {},
    "outputs": [
@@ -918,7 +921,7 @@
        " 'best_cv_roc_auc': 0.9684465802433795}"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -942,7 +945,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 90,
    "id": "4510fba9",
    "metadata": {},
    "outputs": [
@@ -953,7 +956,7 @@
        " 'best_cv_roc_auc': 0.9724270126864617}"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -976,7 +979,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 91,
    "id": "9b6a5ab0",
    "metadata": {},
    "outputs": [
@@ -1056,7 +1059,7 @@
        "0  0.676667  0.000000  0.500000               Dummy"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1078,24 +1081,11 @@
     "    model_metrics = {k: v for k, v in model_data.items() if k != \"model\"}\n",
     "    models_dict[model_name] = model_metrics\n",
     "\n",
-    "metrics_data = {\n",
-    "    \"metadata\": {\n",
-    "        \"experiment\": \"HW06 Binary Classification\",\n",
-    "        \"dataset\": \"S06-hw-dataset-01.csv\",\n",
-    "        \"target_variable\": \"target\",\n",
-    "        \"test_size\": 0.25,\n",
-    "        \"random_state\": RANDOM_STATE,\n",
-    "        \"stratify\": True,\n",
-    "        \"cv_folds\": 5,\n",
-    "        \"cv_scoring\": \"roc_auc\",\n",
-    "        \"timestamp\": datetime.datetime.now().isoformat()\n",
-    "    },\n",
-    "    \"models\": models_dict  # ← ОБЪЕКТ, а не массив!\n",
-    "}\n",
     "\n",
     "\n",
-    "save_json(metrics_data, ARTIFACTS_DIR / \"metrics_test.json\")\n",
     "\n",
+    "save_json(models_dict, ARTIFACTS_DIR / \"metrics_test.json\")\n",
+    "save_json(search_summaries, ARTIFACTS_DIR / \"search_summaries.json\")\n",
     "\n",
     "\n",
     "res_sorted"
@@ -1103,7 +1093,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 92,
    "id": "008c927c",
    "metadata": {},
    "outputs": [],
@@ -1130,7 +1120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 93,
    "id": "687ff69e",
    "metadata": {},
    "outputs": [
@@ -1185,7 +1175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 94,
    "id": "40dd5a4d",
    "metadata": {},
    "outputs": [
@@ -1227,7 +1217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 95,
    "id": "06501044",
    "metadata": {},
    "outputs": [
@@ -1246,7 +1236,7 @@
        " 'num16']"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1257,7 +1247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 96,
    "id": "5820452d",
    "metadata": {},
    "outputs": [
@@ -1290,7 +1280,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 97,
+   "id": "31ed27fb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'LogisticRegression': {'best_params': {'lr__C': 10.0,\n",
+       "   'lr__penalty': 'l2',\n",
+       "   'lr__solver': 'lbfgs'},\n",
+       "  'best_cv_roc_auc': 0.8822238806908922},\n",
+       " 'DecisionTree': {'best_params': {'ccp_alpha': 0.0,\n",
+       "   'max_depth': 50,\n",
+       "   'min_samples_leaf': 20},\n",
+       "  'best_cv_roc_auc': 0.9112358432907914},\n",
+       " 'RandomForest': {'best_params': {'max_depth': 50,\n",
+       "   'max_features': 'sqrt',\n",
+       "   'min_samples_leaf': 1},\n",
+       "  'best_cv_roc_auc': 0.9684465802433795},\n",
+       " 'Boosting': {'best_params': {'learning_rate': 0.1,\n",
+       "   'max_depth': 10,\n",
+       "   'max_leaf_nodes': 63},\n",
+       "  'best_cv_roc_auc': 0.9724270126864617}}"
+      ]
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "search_summaries"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
    "id": "c065fcaa",
    "metadata": {},
    "outputs": [
